--- a/source/index.html
+++ b/source/index.html
@@ -25,24 +25,49 @@
     </header>
 
     <div class="hero">
-        <div class="hero_name">
-            <h1>D</h1>
-            <h1>A</h1>
-            <h1>N</h1>
-            <h1>I</h1>
+        <div class="hero_text">
+            <div class="hero_name">
+                <h1>D</h1>
+                <h1>A</h1>
+                <h1>N</h1>
+                <h1>I</h1>
+            </div>
+            <div class="hero_surname">
+                <h1>H</h1>
+                <h1>E</h1>
+                <h1>R</h1>
+                <h1>N</h1>
+                <h1>A</h1>
+                <h1>N</h1>
+                <h1>D</h1>
+                <h1>E</h1>
+                <h1>Z</h1>
+            </div>
+            <h2>FRONTEND DEVELOPER</h2>
+            <p>Based in Argentina</p>
         </div>
-        <div class="hero_surname">
-            <h1>H</h1>
-            <h1>E</h1>
-            <h1>R</h1>
-            <h1>N</h1>
-            <h1>A</h1>
-            <h1>N</h1>
-            <h1>D</h1>
-            <h1>E</h1>
-            <h1>Z</h1>
+        <img src="../multimedia/no-profile-pic.png" alt="profile picture" srcset="">
+    </div>
+    <div class="work">
+        <h3>WORK</h3>
+        <ul>
+            <li>Project N°1</li>
+            <li>Project N°2</li>
+            <li>Project N°3</li>
+            <li>Project N°4</li>
+        </ul>
+        <div class="project_details">
+            <div class="project_text">
+                <p class="project_title">Project Name</p>
+                <p>
+                    Project details.
+                    <br>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis eaque itaque illo delectus reiciendis ad hic laboriosam, error veniam, magnam nisi! Ipsam reprehenderit cupiditate saepe quaerat ipsum illum facere doloribus.
+                </p>
+            </div>
+            <img src="../multimedia/no-profile-pic.png" alt="" srcset="">
+
         </div>
     </div>
-    
 </body>
 </html>
