First Stage Finished

--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
 
-    <div class="hero">
+    <section class="hero">
         <div class="hero_text">
             <div class="hero_name">
                 <h1>D</h1>
@@ -47,8 +47,8 @@
             <p>Based in Argentina</p>
         </div>
         <img src="../multimedia/no-profile-pic.png" alt="profile picture" srcset="">
-    </div>
-    <div class="work">
+    </section>
+    <section class="work">
         <h3>WORK</h3>
         <ul>
             <li>Project N°1</li>
@@ -68,6 +68,38 @@
             <img src="../multimedia/no-profile-pic.png" alt="" srcset="">
 
         </div>
-    </div>
+    </section>
+    <section class="about">
+        <h3>ABOUT</h3>
+        <img src="../multimedia/no-profile-pic.png" alt="">
+        <div class="about_text">
+            <p class="about_title">
+                I am <span>Daniel Hernandez</span>
+            </p>
+            <p class="about_bio">
+                I'm a frontend developer based in <span>Argentina</span> with some apetite for design. I try to design and develope sites and apps wich provides the best user experience posible.
+            </p>
+            <p class="about_bio">
+                I try to write an easy to read code, trying to attach to best practices and working in developing standards. First: it has to work; second: it's has to be readable; third: it has to be the smallest version of itself
+            </p>
+        </div>
+    </section>
+    <section class="contact">
+        <h3>CONTACT</h3>
+        <p>Let's get in touch!</p>
+        <form action="">
+            <label for="mail">Your E-mail:</label>
+            <input type="text" name="mail" id="" placeholder="example@gmail.com">
+            <label for="msg">Your message:</label>
+            <input type="text" name="msg" id="" placeholder="Let's meet!">
+            <input class="submit" type="submit" value="SEND">
+        </form>
+    </section>
+    <footer>
+        <p>Daniel Hernandez</p>
+        <p>Frontend Developer</p>
+        <p>2022</p>
+    </footer>
+
 </body>
 </html>
